# ogre

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  justfile  ogre.sublime-project  vcpkg.json
.claude/agents/: ci-sync-enforcer.md  docs-sync-auditor.md
.devcontainer/: Dockerfile
.github/workflows/: build.yml
docs/: implementation_plan.md
src/: CMakeLists.txt  unittests.cc  vk_connection.cc  vk_connection.h
src/core/: CMakeLists.txt  allocator.cc  allocator.h  allocator_unittests.cc  buffer_view.cc  buffer_view.h  buffer_view_unittests.cc  device_buffer.cc  device_buffer.h  device_buffer_descriptor.cc  device_buffer_descriptor.h  formats.cc  formats.h  host_buffer.cc  host_buffer.h  range.cc  raw_ptr.cc  resource_binder.cc  resource_binder.h  runtime_types.cc  sampler.cc  sampler.h  sampler_descriptor.cc  sampler_descriptor.h  shader_types.cc  shader_types.h  texture.cc  texture.h  texture_descriptor.cc  texture_descriptor.h  vertex_buffer.cc  vertex_buffer.h
src/ep/: vk.cc  (+4 more)
src/geometry/: CMakeLists.txt  README.md  arc.cc  arc.h  arc_unittests.cc  color.cc  color.h  constants.cc  dashed_line_path_source.cc  dashed_line_path_source.h  geometry_asserts.h  geometry_benchmarks.cc  geometry_unittests.cc  gradient.cc  gradient.h  half.h  matrix.cc  matrix.h  matrix_decomposition.cc  matrix_decomposition.h  matrix_unittests.cc  path_source.cc  path_source.h  path_source_unittests.cc  point.h  point_unittests.cc  quaternion.h  rational.cc  rational.h  rational_unittests.cc  rect.h  rect_unittests.cc  round_rect.cc  round_rect.h  round_rect_unittests.cc  round_superellipse.cc  round_superellipse.h  round_superellipse_param.cc  round_superellipse_param.h  round_superellipse_unittests.cc  (+22 more)
(+401 files in other folders)
