add_library(geometry
  arc.cc
  arc.h
  color.cc
  color.h
  constants.cc
  constants.h
  dashed_line_path_source.cc
  dashed_line_path_source.h
  gradient.cc
  gradient.h
  half.h
  matrix.cc
  matrix.h
  matrix_decomposition.cc
  matrix_decomposition.h
  path_source.cc
  path_source.h
  point.cc
  point.h
  quaternion.cc
  quaternion.h
  rational.cc
  rational.h
  rect.cc
  rect.h
  round_rect.cc
  round_rect.h
  round_superellipse.cc
  round_superellipse.h
  round_superellipse_param.cc
  round_superellipse_param.h
  rounding_radii.cc
  rounding_radii.h
  rstransform.cc
  rstransform.h
  saturated_math.h
  scalar.h
  separated_vector.cc
  separated_vector.h
  shear.cc
  shear.h
  sigma.cc
  sigma.h
  size.cc
  size.h
  trig.cc
  trig.h
  type_traits.cc
  type_traits.h
  vector.cc
  vector.h
  wangs_formula.cc
  wangs_formula.h
)

target_include_directories(geometry PUBLIC ..)
